feat(Close #43): implement get post
